--- a/hiera/users/username.yaml.example
+++ b/hiera/users/username.yaml.example
@@ -80,7 +80,6 @@
 #   - archiver
 #   - arduino
 #   - bittorrent-sync
-#   - boot2docker-status
 #   - caffeine # http://lightheadsw.com/caffeine/
 #   - calibre # http://calibre-ebook.com/
 #   - ccleaner # http://www.piriform.com/mac/ccleaner
@@ -106,7 +105,6 @@
 #   - github-desktop # https://desktop.github.com/
 #   - google-drive
 #   - google-hangouts
-#   - google-notifier # http://toolbar.google.com/gmail-helper/notifier_mac.html
 #   - gpgtools
 #   - graphviz # http://www.graphviz.org/
 #   - hipchat
@@ -136,7 +134,6 @@
 #   - nmap
 #   - oclint # http://oclint.org/
 #   - omnigraffle
-#   - onyx # http://www.titanium.free.fr/downloadonyx.php
 #   - opera
 #   - opera-mobile-emulator
 #   - osxfuse # http://osxfuse.github.io/
@@ -235,5 +232,6 @@
 #   - w3m
 #   - watch
 #   - wget
+#   - wifi-password
 #   - xctool
 #   - xpdf
